Upgraded akka to 2.2. Bumped scala to 2.10.3. Play to 2.1.5

--- a/conf/common.conf
+++ b/conf/common.conf
@@ -24,7 +24,7 @@ application.global=rearview.Global
 db.default.driver="com.mysql.jdbc.Driver"
 db.default.url="jdbc:mysql://localhost:3306/rearview"
 db.default.user="root"
-db.default.password=""
+db.default.password="password"
 
 # In order to reduce lock contention and thus improve performance,
 # each incoming connection request picks off a connection from a
@@ -106,7 +106,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Graphite
-graphite.host="http://graphite.livingsocial.net"
+graphite.host="http://graphite1"
 graphite.auth="bogus123"
 graphite.timeout=10000
 
@@ -126,13 +126,13 @@ statsd.port=8125
 service.hostname="localhost:9000"
 
 openid.host="https://www.google.com/accounts/o8/id"
-openid.domain="hungrymachine.com"
+openid.domain="victorops.com"
 
 ruby.script="ruby/monitor.rb"
 ruby.sandbox.timeout=5
 
 # Email
-email.from="rearview@livingsocial.com"
+email.from="rearview@victorops.com"
 email.host="localhost"
 email.port=25
 
