Changed graphite host to localhost

--- a/conf/common.conf
+++ b/conf/common.conf
@@ -106,8 +106,8 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Graphite
-graphite.host="http://graphite1"
-graphite.auth="bogus123"
+graphite.host="http://localhost:8081"
+graphite.auth=""
 graphite.timeout=10000
 
 # An array of class names to load on startup for alerting
