Fixed start script to change to /opt/rearview

--- a/scripts/rearview.conf
+++ b/scripts/rearview.conf
@@ -10,7 +10,7 @@ stop on shutdown
 # respawn 10 6
 
 script
-  cd /opt/victorops
+  cd /opt/rearview
   ./start
   emit rearview_running
 end script
