Added VictorOps api support

--- a/conf/common.conf
+++ b/conf/common.conf
@@ -116,6 +116,9 @@ alert.class_names = []
 # pager duty
 pagerduty.uri="https://events.pagerduty.com/generic/2010-04-15/create_event.json"
 
+# VictorOps
+victorops.uri="https://alert.victorops.com/integrations/generic/20131114/alert"
+
 # Statsd
 statsd.enabled=true
 statsd.stat.prefix="rearview"
